Minuteur finis avec design

--- a/min_chrono.html
+++ b/min_chrono.html
@@ -8,22 +8,34 @@
 		<!-- MON SCRIPT -->
 		<script type="text/javascript" src="js/minuteur.js"></script>
 	</head>
-<body>
+<body class="min_chrono">
 	
 
 <main>
 
 <!-- <input id="minuteur" type="time" value="00:00:00" step="1">
 <button id="valider">Valider</button> -->
+<article>
+	<div class="minuteur">
+		<div class="boutton">
+			<div class="nom_input">
+				<p>Heures :</p>
+				<p>Minutes :</p>
+				<p>Secondes :</p>
+			</div>
+			<div>
+				<button id="heure">00</button>
+				<button id="minute">00</button>
+				<button id="seconde">00</button>
+			</div>
+			<div class="controle_minuteur">
+				<button id="lancer_minuteur">Lancer</button>
+				<button id="reset_minuteur">Remettre à 0</button>	
+			</div>
+		</div>
+	</div>
 
-<div class="minuteur">
-	<button id="heure">00</button>
-	<button id="minute">00</button>
-	<button id="seconde">00</button>
-	<button id="lancer_minuteur">Lancer</button>
-	<button id="reset_minuteur">Remettre à 0</button>	
-<div>
-
+<article>
 
 </main>
 
