Minuteur et chronomètre finis avec adaptation au format mobile

--- a/min_chrono.html
+++ b/min_chrono.html
@@ -13,6 +13,7 @@
 	
 
 <main>
+<button id="responsive">J'ai un téléphone</button>
 <article>
 	<div class="minuteur_chrono">
 		<div class="image_minuteur" ><img src="img/minuteur.png">Minuteur</div>
@@ -23,7 +24,7 @@
 					<p>Minutes :</p>
 					<p>Secondes :</p>
 				</div>
-				<div>
+				<div id="affichage_telephone">
 					<button id="heure">00</button>
 					<button id="minute">00</button>
 					<button id="seconde">00</button>
