Minuteur et chronomètre finis avec adaptation mobile

--- a/min_chrono.html
+++ b/min_chrono.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>Accueil</title>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=0.7">
 		<link href="css/style.css" rel="stylesheet">
 		<!-- JQUERY -->
 		<script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
